--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         name="registration"
         id="registration-form"
         method="POST"
-        action="?success=true"
+        action="/?success=true"
         data-netlify="true"
         data-netlify-honeypot="bot-field"
       >
@@ -272,7 +272,7 @@
     </div>
   </main>
 
-  <footer>© 2025 XM Trading. Tous droits réservés.</footer>
+  <footer>©️ 2025 XM Trading. Tous droits réservés.</footer>
 
   <script>
   document.addEventListener('DOMContentLoaded', () => {
